--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -185,7 +185,7 @@
     display: none;
   }
   .nav--small .nav__feedback--tel {
-    display: none;
+    //display: none;
   }
   .nav--small .nav__link {
     padding-top: 5px;
@@ -286,7 +286,7 @@
     border-bottom: 1px dashed @menu-desktop-color;
     
     &:first-of-type {
-      margin-bottom: 10px;
+      //margin-bottom: 10px;
     }
   }
   .nav__feedback--tel {
