--- a/less/style.less
+++ b/less/style.less
@@ -15,3 +15,4 @@
 @import "blocks/totop.less";
 @import "blocks/feedback.less";
 @import "blocks/overlay.less";
+@import "blocks/shedule-excel.less";
