--- a/less/blocks/shedule-excel.less
+++ b/less/blocks/shedule-excel.less
@@ -1,5 +1,152 @@
+.shedule-excel-variant1 {
+  table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 14px;
+    background: white;
+    max-width: 70%;
+    width: 70%;
+    border-collapse: collapse;
+    text-align: left;
+  }
+  th {
+    font-weight: normal;
+    color: #039;
+    border-bottom: 2px solid #6678b1;
+    padding: 10px 8px;
+  }
+  td {
+    color: #669;
+    padding: 9px 8px;
+    transition: .3s linear;    
+    border-bottom: 1px solid #ccc;
+    color: #669;
+  }
+  tr:hover td {color: #6699ff; background: #e8edff;}  
+}
+
+.shedule-excel-variant2 {
+  table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 14px;
+    background: white;
+    max-width: 70%;
+    width: 70%;
+    border-collapse: collapse;
+    text-align: left;
+  }
+  th {
+    font-weight: normal;
+    border-bottom: 2px solid #6678b1;
+    border-right: 30px solid #fff;
+    border-left: 30px solid #fff;
+    color: #039;
+    padding: 8px 2px;
+  }
+  td {
+    border-right: 30px solid #fff;
+    border-left: 30px solid #fff;
+    color: #669;
+    padding: 12px 2px;
+  }
+  tr:hover td {color: #6699ff; background: #e8edff;}  
+}
+
+
+.shedule-excel-variant3 {
+  table {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 14px;
+  max-width: 70%;
+  width: 70%;
+  text-align: center;
+  border-collapse: collapse;
+  border-top: 7px solid #9baff1;
+  border-bottom: 7px solid #9baff1;
+  }
+  th {
+    font-size: 13px;
+    font-weight: normal;
+    background: #e8edff;
+    border-right: 1px solid #9baff1;
+    border-left: 1px solid #9baff1;
+    color: #039;
+    padding: 8px;
+  }
+  td {
+    background: #e8edff;
+    border-right: 1px solid #aabcfe;
+    border-left: 1px solid #aabcfe;
+    color: #669;
+    padding: 8px;
+  }
+}
+.shedule-excel-variant4 {
+  table {
+  font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+  font-size: 14px;
+  max-width: 70%;
+  width: 70%;
+  text-align: center;
+  border-collapse: collapse;
+  border-top: 7px solid #9baff1;
+  border-bottom: 7px solid #9baff1;
+  }
+  th {
+  font-weight: normal;
+  color: #039;
+  padding: 10px 15px;
+  }
+  td {
+    color: #669;
+    border-top: 1px solid #e8edff;
+    padding: 10px 15px;
+  }
+  tr:nth-child(2n) td {background: #e8edff;}
+}
+
+.shedule-excel-variant5 {
+  table {border: 1px solid #69c;}
+  th {
+    font-weight: normal;
+    color: #039;
+    padding: 10px;
+  }
+  td {
+    color: #669;
+    border-top: 1px dashed #fff;
+    padding: 10px;
+    background: #ccddff;
+  }
+  tr:hover td {background: #99bcff;}
+}
+
+.shedule-excel-variant6 {
+  table {
+    background: url("../images/textur.jpg") repeat;
+    //background-size: cover;
+    //background-position: 100% 55px;
+  }
+  th {
+    font-weight: normal;
+    color: #339;
+    padding: 10px 12px;
+   }
+  td {
+    //background: url("https://html5book.ru/images/back.png");
+    color: #669;
+    border-top: 1px solid white;
+    padding: 10px 12px;
+    //background: #ccddff;
+  }
+  tr:hover td {
+    //background: url("https://html5book.ru/images/back.png"); 
+    background: transparent;
+    //background-color: #99bcff;;
+  }
+}
+
 .shedule-excel__table {
-  margin: 2em auto;
+  //margin: 2em auto;
 }
 .shedule-excel__table th {
   font-size: 13px;
@@ -21,7 +168,7 @@
   background: #a9ddfe;
 }
 .shedule-excel__table tr:nth-child(2n) td {
-  background: #ffc9fe;
+  //background: #ffc9fe;
 }
 
 .shedule-excel__table tr:hover td {background: #ccddff;}
