--- a/less/blocks/teachers.less
+++ b/less/blocks/teachers.less
@@ -38,7 +38,10 @@
     //text-align: center;
     //margin: 0 auto;
     margin-bottom: 30px;
-
+    
+    //margin-left: 15px;
+    //margin-right: 15px;
+    
     border: 1px solid @teachers-border;
     border-radius: 10px 10px 10px 10px;
     &:nth-of-type(2n) {
@@ -50,7 +53,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;    
   }
 }
 
@@ -59,7 +62,15 @@
     width: 48%;
   }
 }*/
+@media @middle-tablets {
+  .teachers__items {
+    justify-content: space-around;
+  }
+}
 @media @tablets {
+  .teachers__items {
+    justify-content: space-between;
+  }
   .teachers__item {
     width: 48%;
   }
