изменена форма расписания - переделано на табличную форму

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -12,7 +12,11 @@
     text-align: center;
   }
   .about__text {
+    font-family: 'Open Sans';
+    font-weight: bold;
+
     text-align: center;
+    line-height: 24px;
   }
 }
 
