--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -18,14 +18,14 @@
   .contacts__address {
     position: relative;
     min-height: 300px;
-    
-    text-align: center; 
-    margin-bottom: 0.2em; 
+
+    text-align: center;
+    margin-bottom: 0.2em;
     padding-left: 10px;
     padding-right: 10px;
   }
   .contacts__address-title {
-    .set-font('Arial', 'bold', 14px, @address-title);    
+    .set-font('Arial', 'bold', 14px, @address-title);
     text-decoration: underline;
     margin-top: 10px;
     margin-bottom: 5px;
@@ -34,36 +34,38 @@
     }
   }
   .contacts__address-text {
-    .set-font('Arial', 'normal', 12px, @address-text);    
+    .set-font('Arial', 'normal', 12px, @address-text);
   }
   .contacts__address-title-taxi {
-    .set-font('Arial', 'normal', 12px, @address-title);    
+    .set-font('Arial', 'normal', 12px, @address-title);
     font-style: italic;
     margin-top: 10px;
     margin-bottom: 5px;
     padding-left: 20px;
   }
   .contacts__address-text-taxi {
-    .set-font('Arial', 'normal', 10px, @address-text);    
+    .set-font('Arial', 'normal', 10px, @address-text);
     padding-left: 20px;
   }
-  
+  .contacts__address-item {
+    margin-bottom: 25px;
+  }
   /*.contacts__address-map {
-    position: absolute;    
+    position: absolute;
     z-index: 1;
-    
-    width: 100%;    
+
+    width: 100%;
     height: 100%;
-    
+
     left: 0;
     top: 0;
-  
+
     background: url('../images/sky-street.jpg') no-repeat;
     background-size: cover;
-    
-    opacity: 0.2;    
+
+    opacity: 0.2;
     transition-property: opacity;
-    transition-duration: 0.5s;  
+    transition-duration: 0.5s;
   }
   .contacts__address-text:hover ~ .contacts__address-map {
     opacity: 0.7;
@@ -94,15 +96,15 @@
   .contacts__google-map {
     width: 48%;
   }
-  .contacts__address {  
+  .contacts__address {
     box-sizing: border-box;
     padding: 30px;
     padding-top: 0;
     margin-right: 20px;
-    
+
     text-align: left;
-    //margin-bottom: 0;       
-  }   
+    //margin-bottom: 0;
+  }
 }
 
 @media @desktops {
