--- a/less/blocks/teachers.less
+++ b/less/blocks/teachers.less
@@ -38,10 +38,10 @@
     //text-align: center;
     //margin: 0 auto;
     margin-bottom: 30px;
-    
+
     //margin-left: 15px;
     //margin-right: 15px;
-    
+
     border: 1px solid @teachers-border;
     border-radius: 10px 10px 10px 10px;
     &:nth-of-type(2n) {
@@ -53,7 +53,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;    
+    justify-content: space-between;
   }
 }
 
@@ -68,9 +68,6 @@
   }
 }
 @media @tablets {
-  .teachers__items {
-    justify-content: space-between;
-  }
   .teachers__item {
     width: 48%;
   }
@@ -83,6 +80,13 @@
   .teachers__wrapper {
     max-width: @max-width;
     margin: 0 auto;
+    //margin-left: 50px;
+    //margin-right: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .teachers__items {
+    justify-content: space-between;
   }
   .teachers__item {
     width: 23%;
@@ -100,7 +104,7 @@
   }
   .teachers__photo {
     overflow: hidden;
-    height: 195px;
+    height: 185px;
     margin-bottom: 15px;
   }
   @scale_size: 1.2;                 // масштаб картинки
