Добавлен текст в промоблок, фотография Ерхалевой, убрана Алла

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -40,6 +40,13 @@
   .footer #smartphone {
     stroke: #ffffff;
   }
+  .footer__title {
+    margin-top: 10px;
+    margin-right: 10px;
+    font-size: 20px;
+    
+    color: #ffffff;
+  }
 }
 
 @media @tablets {
@@ -64,7 +71,7 @@
   }
 }
 
-@media desktops {
+@media @desktops {
   .footer__wrapper {
     max-width: @max-width;
     margin: 0 auto;
