--- a/less/blocks/social.less
+++ b/less/blocks/social.less
@@ -47,6 +47,11 @@
   #social__item--inst {
     fill: #080911;
   }
+  #social__item-footer--vk,
+  #social__item-footer--inst {
+    fill: #ffffff;
+  }
+  
   /*.social__item--footer #social__item--vk,
   .social__item--footer #social__item--fb,
   .social__item--footer #social__item--tw,
