Добавлен скролл к таблице с расписанием

--- a/less/blocks/schedule.less
+++ b/less/blocks/schedule.less
@@ -23,6 +23,12 @@
     flex-direction: column;
     height: 100%;
   }
+  .schedule__table {
+    //width: 100%;
+    //max-width: 450px;
+    overflow: auto;
+    margin-bottom: 30px;    
+  }
   .schedule__table th {
     font-size: 13px;
     font-weight: normal;
