--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -75,7 +75,7 @@
     &:hover::before,
     &:hover::after {
       //background-color: @menu-hover-color;
-      opacity: 0.5;
+      //opacity: 0.5;      
     }
   }
   .nav__tel {
