--- a/less/blocks/schedule.less
+++ b/less/blocks/schedule.less
@@ -26,7 +26,7 @@
   .schedule__table {
     //width: 100%;
     //max-width: 450px;
-    overflow: scroll;
+    overflow: auto;
     margin-bottom: 30px;    
   }
   .schedule__table th {
