--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -25,58 +25,48 @@
     padding-right: 10px;
   }
   .contacts__address-title {
-    .set-font('Arial', 'bold', 14px, @address-title);
+    .set-font('Arial', 'bold', 19px, @address-title);
     text-decoration: underline;
     margin-top: 10px;
     margin-bottom: 5px;
     &:first-of-type {
       margin-top: 0;
     }
-  }
+  }          
+  
+  .contacts__address-item {
+    &--icons {
+      padding-left: 25px;
+      
+      background-repeat: no-repeat;
+      background-size: 12px 25px;
+      background-position: 0 10px;      
+    }
+    &--address-icon {
+      background-image: url('../images/address.svg');  
+    }
+    &--phone-icon {
+      background-image: url('../images/phone.svg');  
+    }
+  }  
+    
   .contacts__address-text {
-    .set-font('Arial', 'normal', 12px, @address-text);
+    .set-font('Arial', 'normal', 17px, @address-text);
   }
   .contacts__address-title-taxi {
-    .set-font('Arial', 'normal', 12px, @address-title);
+    .set-font('Arial', 'normal', 15px, @address-title);
     font-style: italic;
     margin-top: 10px;
     margin-bottom: 5px;
     padding-left: 20px;
   }
   .contacts__address-text-taxi {
-    .set-font('Arial', 'normal', 10px, @address-text);
+    .set-font('Arial', 'normal', 14px, @address-text);
     padding-left: 20px;
   }
   .contacts__address-item {
     margin-bottom: 25px;
-  }
-  /*.contacts__address-map {
-    position: absolute;
-    z-index: 1;
-
-    width: 100%;
-    height: 100%;
-
-    left: 0;
-    top: 0;
-
-    background: url('../images/sky-street.jpg') no-repeat;
-    background-size: cover;
-
-    opacity: 0.2;
-    transition-property: opacity;
-    transition-duration: 0.5s;
-  }
-  .contacts__address-text:hover ~ .contacts__address-map {
-    opacity: 0.7;
-  }
-  .contacts__address-text {
-    position: relative;
-    z-index: 2;
-    cursor: pointer;
-    transition-property: opacity;
-    transition-duration: 0.5s;
-  }*/
+  }    
 }
 
 @media @tablets {
