--- a/less/blocks/schedule.less
+++ b/less/blocks/schedule.less
@@ -27,6 +27,7 @@
     //width: 100%;
     //max-width: 450px;
     overflow: auto;
+    margin-top: 30px;
     margin-bottom: 30px;    
   }
   .schedule__table th {
