--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -32,24 +32,8 @@
     &:first-of-type {
       margin-top: 0;
     }
-  }          
-  
-  .contacts__address-item {
-    &--icons {
-      padding-left: 25px;
-      
-      background-repeat: no-repeat;
-      background-size: 12px 25px;
-      background-position: 0 10px;      
-    }
-    &--address-icon {
-      background-image: url('../images/address.svg');  
-    }
-    &--phone-icon {
-      background-image: url('../images/phone.svg');  
-    }
-  }  
-    
+  }
+
   .contacts__address-text {
     .set-font('Arial', 'normal', 17px, @address-text);
   }
@@ -66,7 +50,31 @@
   }
   .contacts__address-item {
     margin-bottom: 25px;
-  }    
+  }
+
+  .contacts__address-item {
+    display: inline-block;
+    &--icons {
+      padding-left: 25px;
+
+      background-repeat: no-repeat;
+      background-size: 12px 25px;
+      background-position: 0 10px;
+    }
+    &--address-icon {
+      background-image: url('../images/address.svg');
+    }
+    &--bus-icon {
+      background-image: url('../images/bus.svg');
+      background-size: 16px 22px;
+    }
+    &--phone-icon {
+      background-image: url('../images/phone.svg');
+    }
+    &--social { // блок социальных сетей делаем блочным элементом, т.к. он должен быть отдельным
+      display: block;
+    }
+  }
 }
 
 @media @tablets {
@@ -95,6 +103,7 @@
     text-align: left;
     //margin-bottom: 0;
   }
+
 }
 
 @media @desktops {
