--- a/less/style.less
+++ b/less/style.less
@@ -16,3 +16,4 @@
 @import "blocks/feedback.less";
 @import "blocks/overlay.less";
 @import "blocks/shedule-excel.less";
+@import "blocks/slider.less";
