--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,44 +1,44 @@
 .slider {
-  min-height: 160px;
+  min-height: 200px;
   max-width: 380px;
-  
-  margin-top: 1em; 
-  margin-bottom: 1em;
-  
+
+  margin-top: 1em;
+  //margin-bottom: 1em;
+
   margin-left: auto;
   margin-right: auto;
-  
+
   padding-left: 20px;
   padding-right: 20px;
-  
+
   overflow: hidden;
 }
-.slider__items {  
-  position: relative;  
-  
+.slider__items {
+  position: relative;
+
   width: 100%;
   height: 100%;
 }
 
 .slider__item {
   position: absolute;
-  
+
   left: 0;
   top: 0;
-  
+
   width: 100%;
   height: 100%;
-  
+
   opacity: 0; // 1 - для слайда со сдвигом картинок
   z-index: 1;
-  
+
   transition: opacity 2s;
-  //animation: movingOldSlide  1000ms ease-in-out forwards;  
+  //animation: movingOldSlide  1000ms ease-in-out forwards;
 }
 @keyframes movingOldSlide {
   from {
     opacity: 1;
-    left: 0;    
+    left: 0;
   }
   to {
     opacity: 0;
@@ -49,7 +49,7 @@
 @keyframes movingNewSlide {
   from {
     opacity: 0;
-    left: 100%;    
+    left: 100%;
   }
   to {
     opacity: 1;
@@ -62,42 +62,29 @@
   //animation: movingNewSlide  1000ms ease-in-out forwards;
 }
 
-.slider__item:nth-of-type(1) {
-  background-color: green;
-}
-
-.slider__item:nth-of-type(2) {
-  background-color: red;
-}
-
-/*.slider__item picture {
-  display: block;
-  width: 100%;
-  height: 100%;
-  
-  max-width: @max-width;
-}*/
 .slider__item img {
   width: 100%;
 }
+
 @media @middle-tablets {
   .slider {
     max-width: 460px;
-    min-height: 220px;
+    min-height: 240px;
   }
 }
+
 @media @tablets {
   .slider {
-    max-width: 604px;  
-    min-height: 316px;  
+    max-width: 604px;
+    min-height: 316px;
   }
 }
 
 @media @desktops {
   .slider {
-    max-width: 860px;  
-    min-height: 410px;
-    
+    max-width: 860px;
+    min-height: 450px;
+
     margin-top: 130px;
     margin-bottom: 0;
   }
