Высота слайдера сделана как процент от ширины контейнера со слайдером

--- a/less/variables.less
+++ b/less/variables.less
@@ -22,6 +22,7 @@
 @teachers-border: #5d82aa; // цвет обводки article для преподавателей
 @iframe-color: #5d82aa;
 @padding-title: 20px;      // отступы в заголовках
+@slideRatio: 51.98%;       // процент высоты блока слайдера от ширины слайдера
 /*
 @header-bg: #1d2631;
 @pages-bg: #ffffff;            // background страниц
