--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,9 +1,5 @@
 .slider {
-  min-height: 200px;
-  max-width: 380px;
-
-  margin-top: 1em;
-  //margin-bottom: 1em;
+  margin-top: 1.5em;
 
   margin-left: auto;
   margin-right: auto;
@@ -15,9 +11,8 @@
 }
 .slider__items {
   position: relative;
-
-  width: 100%;
-  height: 100%;
+  padding-top: @slideRatio;      // высота в блока в процентах от ширины
+                                 // сами слайды сделаны абсолютами
 }
 
 .slider__item {
@@ -66,24 +61,9 @@
   width: 100%;
 }
 
-@media @middle-tablets {
-  .slider {
-    max-width: 460px;
-    min-height: 240px;
-  }
-}
-
-@media @tablets {
-  .slider {
-    max-width: 604px;
-    min-height: 316px;
-  }
-}
-
 @media @desktops {
   .slider {
-    max-width: 860px;
-    min-height: 450px;
+    max-width: @max-width; // было 860px
 
     margin-top: 130px;
     margin-bottom: 0;
