--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,11 +1,10 @@
 .slider {
+  position: relative;
+  
   margin-top: 1.5em;
 
-  margin-left: auto;
-  margin-right: auto;
-
-  padding-left: 20px;
-  padding-right: 20px;
+  margin-left: 20px;    // делаем небольшие отступы для слайдов
+  margin-right: 20px;
 
   overflow: hidden;
 }
@@ -61,9 +60,95 @@
   width: 100%;
 }
 
-@media @desktops {
+.slider__btn {       // блоки для будущих кнопок
+  position: absolute;
+  
+  top: 50%;
+  
+  margin-top: -25px; // поднимаем кнопку немного вверх
+  
+  width: 25px;
+  height: 60px;
+  
+  background-color: transparent;
+  
+  z-index: 2;
+  
+  cursor: pointer;  
+}
+.slider__btn--prev.slider__btn {    
+  left: 3%;  // кнопку Назад (prev) отодвигаем от левого края
+}
+.slider__btn--next.slider__btn {     
+  right: 3%; // кнопку Вперед (prev) отодвигаем от правого края   
+}
+
+.slider__btn--prev,        // общие свойства для всех элементов, которые формируют кнопки
+.slider__btn--next {       // стрелочки состоят из двух элементов, повернутых симметрично
+  &::before,
+  &::after {
+    position: absolute;
+    content: '';
+    
+    height: 5px;
+    width: 30px;
+    
+    background-color: white;
+    z-index: 2;  
+  }
+  &:hover::before,
+  &:hover::after {
+    background-color: @menu-desktop-color; // при наведении на стрелки делаем их таким же цветом, как при наведении на пункты меню
+  }
+  &:active::before,
+  &:active::after {
+    height: 4px;
+  }
+  &::before {
+    top: 37px;   
+  }
+  &::after {
+    top: 13px;    
+  }
+}
+.slider__btn--prev {
+  &::before, 
+  &::after {
+    left: -5px;       // при повороте стрелочки немного "уплывают", сдвигом возвращаем на место
+  }
+  &::before {    
+    transform: rotate(60deg); 
+  }
+  &::after {
+    transform: rotate(-60deg);  
+  }
+}
+
+.slider__btn--next { 
+  &::before,
+  &::after {
+    right: -5px;    // при повороте стрелочки немного "уплывают", сдвигом возвращаем на место
+  } 
+  &::before {    
+    transform: rotate(-60deg);    
+  }
+  &::after {
+    transform: rotate(60deg);  
+  }
+}
+
+@media @middle-tablets {
   .slider {
-    max-width: @max-width; // было 860px
+    width: 70%;
+
+    margin-left: auto;   // центрируем контейнер со 
+    margin-right: auto;  // слайдами
+  }
+}
+
+@media @desktops {
+  .slider {    
+    max-width: @max-width; // ограничиваем размер контейнера для слайдов
 
     margin-top: 130px;
     margin-bottom: 0;
