--- a/less/blocks/slider.less
+++ b/less/blocks/slider.less
@@ -1,3 +1,5 @@
+@transitionTime: 2s;
+
 .slider {
   position: relative;
 
@@ -26,7 +28,7 @@
   opacity: 0; // 1 - для слайда со сдвигом картинок
   z-index: 1;
 
-  transition: opacity 2s;
+  transition: opacity @transitionTime;
   //animation: movingOldSlide  1000ms ease-in-out forwards;
 }
 @keyframes movingOldSlide {
@@ -165,6 +167,8 @@
   
   border-radius: 50%;
     
+  transition: background-color @transitionTime;
+  
   background-color: rgba(255,255,255,0.2);
 }
 .slider__control--active {
