--- a/less/style.less
+++ b/less/style.less
@@ -17,3 +17,4 @@
 @import "blocks/overlay.less";
 @import "blocks/shedule-excel.less";
 @import "blocks/slider.less";
+@import "blocks/about-lessons.less";
