--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -12,8 +12,8 @@
     text-align: center;
   }
   .about__text {
-    font-family: 'Open Sans';
-    font-weight: bold;
+    //font-family: 'Open Sans';
+    //font-weight: bold;
 
     text-align: center;
     line-height: 24px;
