--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -151,7 +151,7 @@
     display: flex;
     justify-content: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid #376fac;
+    //border-bottom: 1px solid #376fac;
   }
   #nav__feedback-vk {
     display: none;
