Убран текстовый логотип из шапки. Поправлен min-height

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -36,7 +36,7 @@
     width: 30%;
   }
   .about__wrapper {
-    height: 100vh;
+    min-height: 100vh;
     max-width: @max-width;
     
     padding: 0 100px;
