--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -118,7 +118,8 @@
     margin-right: 30px;
   }
   .nav__logo-text {
-    display: inline-block;
+    //display: inline-block;
+    display: none;
 
     margin-top: 23px;
     margin-left: 20px;
