Добавлено поле 1em перед логотипом в мобильных версиях

--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -18,6 +18,7 @@
     line-height: 24px;
   }
   .about__logo img {
+    padding-top: 1em;
     width: 50%;
     max-width: 300px;
   }
@@ -33,6 +34,7 @@
     padding-top: 10px;
   }
   .about__logo img {
+    padding-top: 0;
     width: 30%;
   }
   .about__wrapper {
