Увеличен размер логотипа на главной странице

--- a/less/global.less
+++ b/less/global.less
@@ -5,7 +5,7 @@ html, body {
 body {
   min-width: 320px;
   color: @text-color;
-  font-family: sans-serif;
+  font-family: helvetica, sans-serif;
 }
 a {
   text-decoration: none;
