Исправлена загрузка расписания

--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -7,6 +7,9 @@
     background-color: @footer-bg-color; // footer серым
     flex: 0 0 auto;
   }
+  .footer--hidden {
+    display: none;
+  }
   .footer__address {
     color: #ffffff;
   }
