--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -86,6 +86,16 @@
 
     .set-font('Open Sans', bold, 22px, @menu-color);
   }
+
+  .nav__lk {
+    position: absolute;
+
+    top: 26px;
+    right: 20px;
+
+    .set-font('Open Sans', bold, 22px, @menu-color);
+  }
+
   .nav__link {
     display: block;
     position: relative;
@@ -307,7 +317,7 @@
   }
   .nav__feedback {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-around;
     //align-self: stretch;
     align-self: center;
