--- a/less/blocks/nav.less
+++ b/less/blocks/nav.less
@@ -8,17 +8,25 @@
     background-color: @menu-bg;
   }
   .nav__menu {
-    position: relative;
+    //position: relative;
     min-height: 50px;
-
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    
     //background-color: @menu-bg;
     //border-bottom: 1px solid @drop-shadow;
   }
+  .nav__btn {
+    position: relative;
+    display: flex;
+    margin: 25px;
+  }
   .nav__btn--hamburger {
-    position: absolute;
+    position: relative;
 
-    top: 24px;
-    left: 20px;
+    //top: 24px;
+    //left: 20px;
 
     width: 25px;
     height: 22px;
@@ -44,10 +52,10 @@
     }
   }
   .nav__btn--close {
-    position: absolute;
+    position: relative;
 
-    top: 20px;
-    left: 20px;
+    //top: 20px;
+    //left: 20px;
 
     width: 25px;
     height: 25px;
@@ -79,19 +87,22 @@
     }
   }
   .nav__tel {
-    position: absolute;
-
-    top: 16px;
-    right: 20px;
-
+    //position: absolute;
+    display: flex;
+    //top: 16px;
+    //right: 20px;
+    margin-top: 20px;
+    
     .set-font('Open Sans', bold, 22px, @menu-color);
   }
 
   .nav__lk {
-    position: absolute;
-
-    top: 26px;
-    right: 20px;
+    //position: absolute;
+    display: flex;
+    //top: 26px;
+    //right: 20px;
+    margin-right: 22px;
+    margin-top: 20px;
 
     .set-font('Open Sans', bold, 22px, @menu-color);
   }
@@ -295,10 +306,10 @@
     cursor: pointer;
 
     border-bottom: 1px dashed @menu-desktop-color;
-
-    &:first-of-type {
-      //margin-bottom: 10px;
-    }
+    margin-right: 25px;    
+  }
+  .nav__feedback--lk {
+    margin-right: 5px;
   }
   .nav__feedback--tel {
     cursor: auto;
