--- a/less/blocks/about.less
+++ b/less/blocks/about.less
@@ -42,7 +42,7 @@
     max-width: @max-width;
 
     padding: 0 100px;
-    margin: 0;
+    margin: 0 auto;
 
     display: flex;
     flex-direction: column;
